# breadgo

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 202606160001_create_users.py  202606160002_create_merchants_and_stores.py  202606160003_create_products.py  202606160004_create_reservations.py  202606160005_create_payments.py  202606160006_add_region_fields_to_stores.py  202606170001_add_product_image_url.py  202606170002_create_settlements.py  202606180001_add_settlement_account_fields.py  202606180002_add_reservation_fulfillment_fields.py  202606180003_add_product_fulfillment_settings.py  202606180004_create_reservation_histories.py  202606180005_create_notifications.py  202606180006_add_payment_provider.py  202606180007_create_product_templates.py  202606180008_create_recommendation_usages.py  202606180009_add_recommendation_adoption_fields.py  202606180010_add_recommendation_funnel_fields.py  202606180011_create_product_events.py  202606180012_create_recommendation_action_events.py  202606180013_create_product_import_history.py  202606180014_create_pos_integration.py  202606180015_create_product_inventory_events.py  (+11 more)
backend/app/: main.py
backend/breadgo_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: run_pro_health_alert_check.py  run_weekly_report_batch.py  seed_demo.py  smoke_test.py
backend/tests/: test_adapter_readiness.py  test_google_oauth.py
frontend/: .env.example  (+3 more)
(+395 files in other folders)
