[project]
name = "breadgo-backend"
version = "0.1.0"
description = "BreadGo MVP FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.13.2",
    "bcrypt==4.0.1",
    "email-validator==2.2.0",
    "fastapi==0.111.0",
    "passlib[bcrypt]==1.7.4",
    "psycopg[binary]>=3.2.13,<4.0",
    "pydantic-settings==2.4.0",
    "python-jose[cryptography]==3.3.0",
    "sqlalchemy==2.0.32",
    "uvicorn[standard]==0.30.5",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[tool.uvicorn]
factory = false
